# ssb-validate2-rsjs-wasm

./: .gitignore  .npmignore  Cargo.toml  README.md  api.js  index.html  index.js  index.mjs  karma.conf.js  module-workers-polyfill.min.js  package-lock.json  package.json  promise-to-cb.js  schema.widl  server.py  wasmLoader.js  webpack.config.js  worker.js
.cargo/: config
example/: README.md  index.html  main.js  package-lock.json  package-lock.json.license  package.json  webpack.config.js
src/: generated.rs  lib.rs
test/: multiAuthorMsgs.js  multiAuthorTest.js  perf.mjs  singleAuthorMsgs.js  test.js  test.mjs
test/data/: multiAuthorMsgs.js  multiAuthorMsgs.json  singleAuthorMsgs.js  singleAuthorMsgs.json  singleAuthorMsgsKeys.js  singleAuthorMsgsKeys.json  valid.js  valid.json  validHmac.js  validHmac.json  validHmacKey.js  validHmacKey.json  validKey.js  validKey.json
