[package]
name = "ssb-validate2-rsjs-wasm"
version = "0.5.1"
authors = ["Andrew Reid <glyph@mycelial.technology>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ssb-crypto = "0.2.2"
serde-wasm-bindgen = "0.3.0"
ssb-validate = "1.4.0"
ssb-verify-signatures = "1.1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-rayon = "1.0"
