# SPDX-FileCopyrightText: 2021 Andrew 'glyph' Reid
#
# SPDX-License-Identifier: Unlicense

[package]
name = "ssb-validate2-rsjs-wasm"
version = "0.5.1"
authors = ["Andrew Reid <glyph@mycelial.technology>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["guest"]
guest = []

[dependencies]
wapc-guest = "0.4.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.115"
serde_bytes = "0.11.5"
rmp-serde = "0.15.5"
lazy_static = "1.4.0"
ssb-validate = "1.4.0"
ssb-verify-signatures = "1.1.0"
ssb-crypto = "0.2.2"

[dev-dependencies]
structopt = "0.3.17"
serde_json = "1.0.57"
base64 = "0.13.0"
binary_macros = "1.0.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
